@@ -23,7 +23,9 @@ import peersim.core.*;
 import peersim.config.Configuration;
 
 /**
- * Takes a {@link Linkable} protocol and adds edges that define a ring lattice.
+ * This class is the superclass of classes that
+ * takes a {@link Linkable} protocol or a graph and add edges that define a
+ * certain topology.
  * Note that no connections are removed, they are only added. So it can be used
  * in combination with other initializers.
  */
@@ -35,7 +37,10 @@ public abstract class WireGraph implements Control
 // --------------------------------------------------------------------------
 
 /**
- * The {@link Linkable} protocol to operate on.
+ * The {@link Linkable} protocol to operate on. If it is not specified,
+ * then operates on {@link #g}. If {@link #g} is null, {@link #execute} throws
+ * an Exception. Note that if {@link #g} is set, it will be used irrespective
+ * of the setting of the protocol in this field.
  * @config
  */
 private static final String PAR_PROT = "protocol";
@@ -73,12 +78,13 @@ private final int pid;
 /** If true, method pack() is invoked on the initialized protocol */
 private final boolean pack;
 
-/** IF true, edges are added in an undirected fashion.*/
-private final boolean undir;
+/** If true, edges are added in an undirected fashion.*/
+public final boolean undir;
 
 /**
 * If set (not null), this is the graph to wire. If null, the current overlay
-* is wired each time {@link #execute} is called.
+* is wired each time {@link #execute} is called, as specified by {@value
+* PAR_PROT}.
 */
 public Graph g=null;
 
@@ -94,7 +100,10 @@ public Graph g=null;
  */
 protected WireGraph(String prefix) {
 
-	pid = Configuration.getPid(prefix + "." + PAR_PROT);
+	if( Configuration.contains(prefix + "." + PAR_PROT) )
+		pid = Configuration.getPid(prefix + "." + PAR_PROT);
+	else
+		pid = -10;
 	pack = Configuration.contains(prefix + "." + PAR_PACK);
 	undir = (Configuration.contains(prefix + "." + PAR_UNDIR) |
 		Configuration.contains(prefix + "." + PAR_UNDIR_ALT));
@@ -106,12 +115,19 @@ protected WireGraph(String prefix) {
 //--------------------------------------------------------------------------
 
 /**
-* Calls method {@link #wire} with the graph given at construction time,
-* or if non was given, on the current overlay.
+* Calls method {@link #wire} with the graph {@link #g},
+* or if null, on the overlay specified by the protocol given by config
+* parameter {@value PAR_PROT}. If neither {@link #g}, nor {@value PAR_PROT}
+* is set, throws a RuntimException.
 */
 public final boolean execute() {
 
 	Graph gr;
+	if(g==null && pid==-10)
+	{
+		throw new RuntimeException(
+			"Neither a protocol, nor a graph is specified.");
+	}
 	if(g==null) gr = new OverlayGraph(pid,!undir);
 	else gr=g;
 
